fix z-index on submit button

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ input[type="text*"] {
   box-shadow: 0px 3px 20px black 0.2;
   left: 0;
   right: 0;
-  z-index: 100;
+  z-index: 1000;
   padding: 20px;
 }
 
